fix map z-index

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -636,7 +636,7 @@ ul.bottom-tabs {
 }
 
 .leaflet-top, .leaflet-bottom {
-    z-index: 1;
+    z-index: 800;
 }
 
 .statistic-container{
